# xp-desafio-mlops

./: Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
notebooks/: model.pkl  train.ipynb
src/model/: model.pkl
src/xp_mlops/: __init__.py  __main__.py  app.py  create_app.py  pipeline_registry.py  settings.py
src/xp_mlops/api/: main.py
src/xp_mlops/api/http/: health.py  predict.py
src/xp_mlops/model/dataclass/v1/: features_input.py  inference_response.py
src/xp_mlops/pipelines/: wine_pipeline.py
tests/: test_run.py
